<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300sp"
    android:gravity="bottom"
    android:background="#92ECFF"
    android:padding="15sp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/full_logo"
        android:contentDescription="@string/header_image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/hello_wellcome_mr_debabrata"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/this_is_navigation_view_header_layout"
        android:textStyle="bold"
        android:textSize="15sp"/>



</LinearLayout>