<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CEF7FF">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/input"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputEdit"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:autofillHints=""
            android:gravity="top"
            android:textStyle="bold"
            android:textColor="#000000"
            android:inputType="textMultiLine"
            android:background="@drawable/edit_text_bg"
            android:padding="10dp"/>

        <RadioGroup
            android:id="@+id/modeGroup"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/radioTextToBF"
                android:checked="true"
                android:layout_marginEnd="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_bf"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/radioBFToText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bf_text"
                android:textStyle="bold"
                android:textColor="#000000"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/convertBtn"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert"
                android:backgroundTint="#85D9FF"
                android:textStyle="bold"
                android:textColor="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/edit_text_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginTop="14sp"
                    android:text="@string/output"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/copyBtn"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:background="@drawable/baseline_content_copy_24"
                    android:backgroundTint="#000000"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="240sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnShare"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:background="@drawable/share__1_"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginTop="10sp"/>

            </LinearLayout>


            <TextView
                android:id="@+id/outputView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="8sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:padding="10dp"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/clearBtn"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textStyle="bold"
                android:textColor="#000000"
                android:backgroundTint="#85D9FF"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
